# pracownia-aplikacji-desktopowych

./: .gitignore
opengl/intro/: CMakeLists.txt
opengl/intro/.cache/clangd/index/: _fixes.hpp.4683A54B8B2DCE57.idx  _vectorize.hpp.17BE124D61B64338.idx  common.hpp.36A9830388981672.idx  compute_common.hpp.BAEB418CDD9C5E62.idx  compute_vector_decl.hpp.ABD6EDAD9A572354.idx  compute_vector_relational.hpp.31788C19EBA674A8.idx  config.h.64817EFA4242E089.idx  constants.hpp.EC07CDF2483987CB.idx  constants.inl.382FBF29C57BB39A.idx  epsilon.hpp.A4ADD7649194F193.idx  epsilon.inl.7E4820310788D57D.idx  exponential.hpp.1F8CC03136EA4535.idx  func_common.inl.FD1D5DA2D90804D6.idx  func_exponential.inl.B9642FF92439972F.idx  func_geometric.inl.6EF71E71FC01BFA3.idx  func_integer.inl.0292FBA251D68986.idx  func_matrix.inl.689CA4156E51DE35.idx  func_packing.inl.B81636ADC7A30BAE.idx  func_trigonometric.inl.0E01C043444E5EB8.idx  func_vector_relational.inl.E5457E19334B5FBD.idx  fwd.hpp.A1F0FFB43C2C1795.idx  (+174 more)
opengl/intro/dependencies/glad/: glad.h
opengl/intro/src/: config.h  cube_mesh.cpp  cube_mesh.hpp  glad.c  main.cpp  shader.cpp  shader.h  square_mesh.cpp  square_mesh.h  triangle_mesh.cpp  triangle_mesh.h
opengl/intro/src/shaders/: cube.frag  fragment.glsl  fragment2.glsl  textureFragment.glsl  textureVertex.glsl  vertex.glsl
qt-test/: CMakeLists.txt  main.cpp
zadanie05_11/: CMakeLists.txt  Main.qml  MainWindow.cpp  MainWindow.h  filehandler.cpp  filehandler.h  main.cpp  test.ppm
zadanie05_11/.cache/clangd/index/: ContrastTools.cpp.55F849F595DD2186.idx  ContrastTools.h.E26E226A20002BC3.idx  DesaturateDialog.cpp.128A2B09FF497B31.idx  DesaturateDialog.h.5F620BE196E98D2B.idx  ExpContrastDialog.cpp.085D249423F1A17F.idx  ExpContrastDialog.h.8ACB0C5E47E81DE7.idx  FileController.cpp.7136DCE1693BB8B1.idx  FileController.h.F8C4F56F2D2CDF95.idx  GrayscaleDialog.cpp.2A542854F9139C8F.idx  GrayscaleDialog.h.82D0542A0CDA6DCC.idx  Image.h.BAE761AD072DB2F2.idx  InvertDialog.cpp.BEFE781062F4EE3E.idx  InvertDialog.h.7203549E2F7E7DCC.idx  LinearContrastDialog.cpp.52CE2F5716032438.idx  LinearContrastDialog.h.8A1BAF8A2C745D5A.idx  LogContrastDialog.cpp.CBE47A96DEAAD48F.idx  LogContrastDialog.h.8087825D3D93545A.idx  MainWindow.cpp.D866DEE302438626.idx  MainWindow.h.E446FCB88605FD91.idx  PBMImage.cpp.48BC11DFBC45790D.idx  PBMImage.h.21737CDAEA60399B.idx  PGMImage.cpp.F894CF973DEDA866.idx  PGMImage.h.A1286341A31E5E3B.idx  PPMImage.cpp.47FAE1C29DD56422.idx  PPMImage.h.161D778181FC9E83.idx  ToolsManager.cpp.5A54320C17255ECA.idx  ToolsManager.h.E6A1D78FFEF69B64.idx  filehandler.cpp.9632E67ADD192D0E.idx  filehandler.h.11F9DA35D0FC6D5C.idx  main.cpp.75F3ABEB67EE2163.idx
zadanie05_11/components/file/: FileController.cpp  FileController.h
zadanie05_11/components/tools/: DesaturateDialog.cpp  DesaturateDialog.h  GrayscaleDialog.cpp  GrayscaleDialog.h  InvertDialog.cpp  InvertDialog.h  SaturationDialog.cpp  SaturationDialog.h  ToolsManager.cpp  ToolsManager.h
zadanie05_11/components/tools/contrast/: ContrastTools.cpp  ContrastTools.h  ExpContrastDialog.cpp  ExpContrastDialog.h  LinearContrastDialog.cpp  LinearContrastDialog.h  LogContrastDialog.cpp  LogContrastDialog.h
zadanie05_11/utils/: filehandler.cpp  filehandler.h
zadanie05_11/utils/image/: Image.h  PBMImage.cpp  PBMImage.h  PGMImage.cpp  PGMImage.h  PPMImage.cpp  PPMImage.h
zadanie_domowe_29_10/: CMakeLists.txt  main.cpp
zadanie_domowe_29_10/qt/qml/: AddTaskDrawer.qml  LoadPage.qml  MainPage.qml  main.qml
(+30 files in other folders)
